# S.C.A.L.E.

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  synthetic-gfc.Dockerfile  synthetic-unpickle.Dockerfile  synthetic-unzip.Dockerfile  tox.ini
.run/: pre-create-random-files.run.xml
docs/: create_diagrams.puml
oc/: Chart.yaml  values.yaml  values_local.yaml
oc/templates/: deployment.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml  synthetic-gfc.yaml  synthetic-unpickle.yaml  synthetic-unzip.yaml
openshift-local-yamls/: buildconfigs.yaml  localstack.yaml
scheduler/: config.py  manage.py  models_customised.dot  settings.toml
scheduler/emissions_client/: __init__.py  emissions_client.py  get_emissions_client.py  models.py
scheduler/energy_calculator/: __init__.py  energy_calculator.py
scheduler/entsoe_client/: __init__.py  apps.py  consts.py  entsoe_api_client.py  get_entsoe_api_client.py  models.py  urls.py  views.py
scheduler/entsoe_service/: __init__.py  entsoe_service.py  mocked_entsoe_service.py
scheduler/frontend/: package-lock.json  package.json  views.py
scheduler/random_file_creator/: __init__.py  random_file_creator.py
scheduler/scheduler/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scheduler/scheduling_app/: admin.py  apps.py  decorators.py  permissions.py  serializers.py  urls.py  utils.py  validators.py
scheduler/synthetic/: .dockerignore
scheduler/utils/: FileStates.py  __init__.py  time_function.py  trcs.py
scripts/: full-local-all.bat  full-local-scheduler.bat  local-build-scheduler.bat  local-build-synthetics.bat  local-deploy-scheduler.bat
scripts/get-solar-and-wind-for-one-day/: solar-wind-one-day.ipynb
scripts/season-averages/: graphs.ipynb  (+6 more)
(+469 files in other folders)
